# research-scout

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
config/: profile.yaml  rss_feeds.yaml
docs/codex/: scientific-code-quality.md  security-and-secrets.md
research_radar/: __init__.py  app.py  auth.py  cli.py  config.py  db.py  models.py
research_radar/digest/: __init__.py  daily.py  emailer.py  formatting.py  weekly.py
research_radar/ingest/: __init__.py  arxiv.py  notion.py  openalex.py  rss.py  semantic_scholar.py  x_placeholder.py
research_radar/jobs/: runner.py
research_radar/llm/: base.py  mock.py  ollama.py  openai_compatible.py
research_radar/ranking/: __init__.py  profile.py  scorer.py
research_radar/web/: routes.py
research_radar/web/static/: styles.css
research_radar/web/templates/: base.html  dashboard.html  digest.html  feedback.html  history.html  jobs.html  login.html  notion.html  papers.html  profile.html  rss.html
scripts/cron/: research-radar.cron
scripts/systemd/: research-radar-daily.service  research-radar-daily.timer  research-radar-weekly.service  research-radar-weekly.timer
tests/: test_auth.py  test_connectors.py  test_digest.py  test_scoring.py  test_web.py
