[project]
name = "research-radar"
version = "0.1.0"
description = "Self-hosted AI research assistant for one researcher."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Research Radar" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "feedparser>=6.0.11",
    "typer>=0.12.3",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]

[project.scripts]
research-radar = "research_radar.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
